adding login, register, logout

--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://officialadirajput_db_user:poyAJbYPEPthV52R@cluster12.b7u3i6q.mongodb.net
 DB_NAME=codehive
+
 CORS_ORIGIN=*
-ACCESS_TOKEN_SECRET=i3nEHads
+ACCESS_TOKEN_SECRET=iVZA9rSLr8qrB4hA3nEH
 ACCESS_TOKEN_EXPIRY=1d
-REFRESH_TOKEN_SECRET=9iVZA99
+REFRESH_TOKEN_SECRET=9iVZA99ska89rSLr8qr
 REFRESH_TOKEN_EXPIRY=10d
-CLOUD_NAME=
-CLOUD_API_KEY=
-CLOUD_API_SECRET=
+CLOUD_NAME=dtxr7lmdn
+CLOUD_API_KEY=117657127179726
+CLOUD_API_SECRET=Vh-Xr_rXn4CrgpUfhIq8AroOSP8
