--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PORT=8000
 MONGODB_URI=mongodb+srv://officialadirajput_db_user:poyAJbYPEPthV52R@cluster12.b7u3i6q.mongodb.net
 DB_NAME=codehive
 
-CORS_ORIGIN=*
+CORS_ORIGIN=http://localhost:3000
 ACCESS_TOKEN_SECRET=iVZA9rSLr8qrB4hA3nEH
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=9iVZA99ska89rSLr8qr
