--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^8.18.1",
     "multer": "^2.0.2",
     "prettier": "^3.6.2",
+    "socket.io": "^4.8.1",
     "validator": "^13.15.15"
   },
   "devDependencies": {
