--- a/.env
+++ b/.env
@@ -4,9 +4,17 @@ DB_NAME=codehive
 
 CORS_ORIGIN=http://localhost:3000
 ACCESS_TOKEN_SECRET=iVZA9rSLr8qrB4hA3nEH
-ACCESS_TOKEN_EXPIRY=1d
+ACCESS_TOKEN_EXPIRY=10d
 REFRESH_TOKEN_SECRET=9iVZA99ska89rSLr8qr
 REFRESH_TOKEN_EXPIRY=10d
 CLOUD_NAME=dtxr7lmdn
 CLOUD_API_KEY=117657127179726
 CLOUD_API_SECRET=Vh-Xr_rXn4CrgpUfhIq8AroOSP8
+
+# Cookie security (set to true in production)
+COOKIE_SECURE=false
+COOKIE_SAME_SITE=lax
+
+# In production, change to:
+# COOKIE_SECURE=true
+# COOKIE_SAME_SITE=none
